# HW9_WEB

HW9_WEB(BS)/: authors.json  command_db.py  config.ini  connect.py  create.py  main.py  models.py  pyproject.toml
HW9_WEB(Scrapy)/: config.ini  create.py  main.py
