[tool.poetry]
name = "hw9-web(bs)"
version = "0.1.0"
description = ""
authors = ["HelenNad <htkachenko88@gmail.com>"]
readme = "README.md"
packages = [{include = "hw9_web(bs)"}]

[tool.poetry.dependencies]
python = "^3.10"
mongoengine = "^0.28.2"
connect = "^0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
